docs: Compact templates for AI consumption (-797 lines)
Templates are for AI, not humans - remove verbose prose:
- CLAUDE-aod-global.md: 114→36 lines
- java-project.md: 197→48 lines
- python-project.md: 315→56 lines
- typescript-project.md: 248→63 lines

Keep essential commands, conventions, placeholders only.